# similarity-metrics

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  string_distances.rs
