[package]
name = "similarity-metrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { version = "0.25.1", features = ["lazy", "timezones", "dtype-datetime", "strings", "lazy_regex", "concat_str", "fmt"] }
