[package]
name = "similarity-metrics"
version = "0.1.0"
edition = "2021"
description = "A collection of event logs similarity metrics for Rust"
readme = "README.md"
repository = "https://github.com/iharsuvorau/similarity-metrics"
license = "MIT"
categories = ["event-logs", "similarity-metrics", "process-mining"]

[lib]
name = "similarity_metrics"
path = "src/lib.rs"

[[bin]]
name = "measure"
path = "src/main.rs"

[badges]
maintenance = { status = "experimental" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { version = "0.25.1", features = ["lazy", "timezones", "dtype-datetime", "strings", "lazy_regex", "concat_str", "fmt"] }

